--- a/AlexFulton_RBPome_Huh7_HepG2_git.Rmd
+++ b/AlexFulton_RBPome_Huh7_HepG2_git.Rmd
@@ -1,6 +1,11 @@
 ---
 title: |
   ![](/Users/catarinafranco/Dropbox (Cambridge University)/Mass4tox/report logo/1x/Asset 3.png)
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author of the report: CatFranco@mass4tox
 date: "31st January 2021"
 output:
