--- a/AlexFulton_RBPome_Huh7_HepG2_git.Rmd
+++ b/AlexFulton_RBPome_Huh7_HepG2_git.Rmd
@@ -59,7 +59,7 @@ library(stringr)
 
 This report summarizes sample handling for mass spectrometry and data analysis (Proteome Discoverer analysis and any additional data manipulation necessary).
  
-## Note test
+## Note test test
 
 The RBPome of both cell lines was extracted using OOPS protocol and samples from RNase treated and non-treated samples were analysed by mass spectrometry (interfase, organic phase and total input). Bellow there is a table with the correspondence of the internal samples number and sample designation.
 
